Setup initial translation support

--- a/src/app/formly-builder/formly-builder.component.html
+++ b/src/app/formly-builder/formly-builder.component.html
@@ -10,7 +10,7 @@
     <formly-form *ngIf="!isFormLoading" [form]="form" [fields]="fields" [model]="model" [options]="options"></formly-form>
 
     <button type="submit" [style.display]="'none'">
-      <div translate>Submit</div>
+      <div translate>FORMLY_CORE.DISPLAY_FORM.SUBMIT</div>
     </button>
   </form>
 
