--- a/src/app/formly-core/fields/expansion-panel-array-field/expansion-panel-array-field.component.html
+++ b/src/app/formly-core/fields/expansion-panel-array-field/expansion-panel-array-field.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="!to.encapsulateLabel" class="flex body-text">
-  <label [for]="field.id" [innerHTML]="to.label + (to.required ? ' *' : '') | tokens: to | keepHtml"></label>
+  <label [for]="field.id" [innerHTML]="((to._translationBaseKey + '.label') | translate) + (to.required ? ' *' : '') | tokens: to | keepHtml"></label>
 
-  <mat-icon *ngIf="to.help" class="label-help" [matTooltip]="to.help" matTooltipClass="mat-tooltip-content">help</mat-icon>
+  <mat-icon *ngIf="to.help" class="label-help" [matTooltip]="(to._translationBaseKey + '.help') | translate | tokens: to" matTooltipClass="mat-tooltip-content">help</mat-icon>
 </div>
 
 <div class="flex fill-width" *ngIf="to.showAddButton">
@@ -63,21 +63,4 @@
   </mat-accordion>
 </div>
 
-<div class="errors-and-hints">
-  <!-- This should remain hidden as its built from Formly's error states and will not pipe to tokens -->
-  <formly-validation-message #validationMessage [field]="field" [style.display]="'none'"></formly-validation-message>
-
-  <mat-error *ngIf="validationMessage.errorMessage && field.formControl?.touched" class="body-text error-text">
-    <ng-container *ngIf="validationMessage.errorMessage | isArray; else stringErrorMessage">
-      <ng-container *ngFor="let errorMessage of validationMessage.errorMessage; let last = last;">
-        {{ errorMessage }}<br *ngIf="!last">
-      </ng-container>
-    </ng-container>
-
-    <ng-template #stringErrorMessage>
-      {{ validationMessage.errorMessage | tokens: field.templateOptions }}
-    </ng-template>
-  </mat-error>
-
-  <mat-hint *ngIf="field.templateOptions?.hint && !(validationMessage.errorMessage && field.formControl?.touched)" class="body-text">{{ field.templateOptions?.hint | tokens: field.templateOptions }}</mat-hint>
-</div>
+<errors-and-hints [field]="field"></errors-and-hints>
