--- a/src/app/formly-core/fields/select-dropdown-field/select-dropdown-field.component.html
+++ b/src/app/formly-core/fields/select-dropdown-field/select-dropdown-field.component.html
@@ -1,8 +1,8 @@
 <div *ngIf="!to.encapsulateLabel" class="flex body-text">
   <!-- This label should not have a for property as the mat-select builds an internal input for the select dropdown that we cannot map to --->
-  <label [innerHTML]="to.label + (to.required ? ' *' : '') | tokens: to | keepHtml"></label>
+  <label [innerHTML]="((to._translationBaseKey + '.label') | translate) + (to.required ? ' *' : '') | tokens: to | keepHtml"></label>
 
-  <mat-icon *ngIf="to.help" class="label-help" [matTooltip]="to.help" matTooltipClass="mat-tooltip-content">help</mat-icon>
+  <mat-icon *ngIf="to.help" class="label-help" [matTooltip]="(to._translationBaseKey + '.help') | translate | tokens: to" matTooltipClass="mat-tooltip-content">help</mat-icon>
 </div>
 
 <mat-form-field
@@ -12,19 +12,19 @@
   [floatLabel]="to.floatLabel || 'always'">
 
   <mat-label *ngIf="to.encapsulateLabel" class="body-text">
-    {{ to.label | tokens: to }}
+    {{ (to._translationBaseKey + '.label') | translate | tokens: to }}
   </mat-label>
 
   <mat-select
     [id]="field.id"
-    [aria-label]="to.label | tokens: to"
+    [aria-label]="(to._translationBaseKey + '.label') | translate | tokens: to"
     [compareWith]="to.compareWith"
     [disableOptionCentering]="to.disableOptionCentering"
     [errorStateMatcher]="errorStateMatcher"
     [formControl]="formControl"
     [formlyAttributes]="field"
     [multiple]="to.multiple"
-    [placeholder]="to.placeholder | tokens: to"
+    [placeholder]="(to._translationBaseKey + '.placeholder') | translate | tokens: to"
     [required]="to.required"
     [tabindex]="to.tabindex || 0"
     [typeaheadDebounceInterval]="to.typeaheadDebounceInterval"
@@ -51,21 +51,4 @@
   </mat-select>
 </mat-form-field>
 
-<div class="errors-and-hints">
-  <!-- This should remain hidden as its built from Formly's error states and will not pipe to tokens -->
-  <formly-validation-message #validationMessage [field]="field" [style.display]="'none'"></formly-validation-message>
-
-  <mat-error *ngIf="validationMessage.errorMessage && formControl.touched" class="body-text error-text">
-    <ng-container *ngIf="validationMessage.errorMessage | isArray; else stringErrorMessage">
-      <ng-container *ngFor="let errorMessage of validationMessage.errorMessage; let last = last;">
-        {{ errorMessage }}<br *ngIf="!last">
-      </ng-container>
-    </ng-container>
-
-    <ng-template #stringErrorMessage>
-      {{ validationMessage.errorMessage | tokens: to }}
-    </ng-template>
-  </mat-error>
-
-  <mat-hint *ngIf="to.hint && !(validationMessage.errorMessage && formControl.touched)" class="body-text">{{ to.hint | tokens: to }}</mat-hint>
-</div>
+<errors-and-hints [field]="field"></errors-and-hints>
