Changed how internal translations are handled

--- a/src/app/formly-builder/modals/field-editor/field-editor.component.html
+++ b/src/app/formly-builder/modals/field-editor/field-editor.component.html
@@ -37,7 +37,7 @@
 
     <div class="margin-top-2">
       <button type="button" mat-raised-button color="primary" [disabled]="categoryField.formControl?.invalid" (click)="onSelectedCategory()">
-        <div translate>FORMLY_CORE.BASE_LABEL.CONTINUE</div>
+        <div translate>Continue</div>
       </button>
     </div>
   </div>
