--- a/src/app/formly-core/components/custom-date-input/custom-date-input.component.html
+++ b/src/app/formly-core/components/custom-date-input/custom-date-input.component.html
@@ -14,8 +14,8 @@
           maxLength="4"
           formControlName="year"
           [style.width]="'50px'"
-          [placeholder]="'FORMLY_CORE.FIELDS.DATE_INPUT_FIELD.YYYY' | translate"
-          [attr.aria-label]="'FORMLY_CORE.FIELDS.DATE_INPUT_FIELD.YEAR' | translate"
+          [placeholder]="'yyyy' | translate"
+          [attr.aria-label]="'Year' | translate"
           (keydown)="keyPress($event, year, index, 9999, 0)"
           (keyup)="keyUp($event, year, index, 9999, 4)"
           (blur)="onBlur(formGroup.controls.year, 9999, 0, 4, false)"
@@ -31,8 +31,8 @@
           maxLength="2"
           formControlName="month"
           [style.width]="'27px'"
-          [placeholder]="'FORMLY_CORE.FIELDS.DATE_INPUT_FIELD.MM' | translate"
-          [attr.aria-label]="'FORMLY_CORE.FIELDS.DATE_INPUT_FIELD.MONTH' | translate"
+          [placeholder]="'mm' | translate"
+          [attr.aria-label]="'Month' | translate"
           (keydown)="keyPress($event, month, index, 12, 0)"
           (keyup)="keyUp($event, month, index, 12)"
           (blur)="onBlur(formGroup.controls.month, 12)"
@@ -46,8 +46,8 @@
           maxLength="2"
           formControlName="day"
           [style.width]="'27px'"
-          [placeholder]="'FORMLY_CORE.FIELDS.DATE_INPUT_FIELD.DD' | translate"
-          [attr.aria-label]="'FORMLY_CORE.FIELDS.DATE_INPUT_FIELD.DAY' | translate"
+          [placeholder]="'dd' | translate"
+          [attr.aria-label]="'Day' | translate"
           (keydown)="keyPress($event, day, index, 31, 0)"
           (keyup)="keyUp($event, day, index, 31)"
           (blur)="onBlur(formGroup.controls.day, 31)"
