--- a/src/app/formly-core/display-types/default-form/default-form.component.html
+++ b/src/app/formly-core/display-types/default-form/default-form.component.html
@@ -1,13 +1,13 @@
 <ng-container *ngFor="let page of field.fieldGroup; let index = index; let last = last;">
   <ng-contaier *ngIf="page.key === options?.formState.currentPage">
-    <div class="title">{{ (page.templateOptions._translationBaseKey + '.label') | translate | tokens: to }}</div>
+    <div class="title">{{ (page.templateOptions._translationKey + '.label') | translate | tokens: to }}</div>
 
     <formly-field [field]="page" [ngClass]="page.templateOptions?.classes"></formly-field>
 
     <div class="form-actions center">
       <mat-form-field *ngIf="this.options?.formState.formHistory?.length > 1">
         <mat-label>
-          <div translate>FORMLY_CORE.DISPLAY_FORM.NAVIGATE_TO_PAGE</div>
+          <div translate>Navigate to Page</div>
         </mat-label>
 
         <mat-select [formControl]="pageHistory" disableOptionCentering="true">
@@ -26,11 +26,11 @@
 
         <div>
           <button *ngIf="!last" type="button" mat-raised-button color="primary" [disabled]="page.formControl?.invalid" (click)="changePage(index + 1)">
-            <div translate>FORMLY_CORE.BASE_LABEL.CONTINUE</div>
+            <div translate>Continue</div>
           </button>
 
           <button *ngIf="last" type="submit" mat-raised-button color="primary" [disabled]="!form.valid">
-            <div translate>FORMLY_CORE.DISPLAY_FORM.SUBMIT</div>
+            <div translate>Submit</div>
           </button>
         </div>
       </div>
