--- a/src/app/formly-core/display-types/stepper-form/stepper-form.component.html
+++ b/src/app/formly-core/display-types/stepper-form/stepper-form.component.html
@@ -12,7 +12,7 @@
     #step>
 
     <ng-template matStepLabel>
-      {{ (page.templateOptions._translationBaseKey + '.label') | translate | tokens: to }}
+      {{ (page.templateOptions._translationKey + '.label') | translate | tokens: to }}
     </ng-template>
 
     <formly-field [field]="page" *ngIf="selectedIndex === index" [ngClass]="page.templateOptions?.classes"></formly-field>
@@ -41,10 +41,10 @@
       [state]="getPageState(page)"
       #step>
 
-      <formly-field [field]="page" *ngIf="selectedIndex === index" [ngClass]="page.templateOptions?.classes"></formly-field>
+      <formly-field *ngIf="selectedIndex === index" [field]="page" [ngClass]="page.templateOptions?.classes"></formly-field>
 
       <ng-template matStepLabel>
-        {{ (page.templateOptions._translationBaseKey + '.label') | translate | tokens: to }}
+        {{ (page.templateOptions._translationKey + '.label') | translate | tokens: to }}
       </ng-template>
     </mat-step>
 
@@ -60,19 +60,35 @@
 
 <div class="form-controls-wrapper" *ngIf="!to.hideButtons">
   <div class="form-controls">
+
     <div class="margin-right-2">
-      <button *ngIf="selectedIndex !== 0 && hasBackPage(selectedIndex)" type="button" mat-raised-button color="primary" (click)="decrementPageFromIndex(selectedIndex - 1)">
-        <div translate>FORMLY_CORE.BASE_LABEL.BACK</div>
+      <button *ngIf="selectedIndex !== 0 && hasBackPage(selectedIndex)"
+        mat-raised-button
+        type="button"
+        color="primary"
+        (click)="decrementPageFromIndex(selectedIndex - 1)">
+
+        <div translate>Back</div>
       </button>
     </div>
 
-    <button *ngIf="hasForwardPage(selectedIndex)" type="button" mat-raised-button color="primary" [disabled]="to.linear && isPrecedingPageInvalid(selectedIndex)"
+    <button *ngIf="hasForwardPage(selectedIndex)"
+      mat-raised-button
+      type="button"
+      color="primary"
+      [disabled]="to.linear && isPrecedingPageInvalid(selectedIndex)"
       (click)="incrementPageFromIndex(selectedIndex + 1)">
-      <div translate>FORMLY_CORE.BASE_LABEL.CONTINUE</div>
+
+      <div translate>Continue</div>
     </button>
 
-    <button *ngIf="!to.hideSubmit && !hasForwardPage(selectedIndex)" type="submit" mat-raised-button color="primary" [disabled]="form.invalid">
-      <div translate>FORMLY_CORE.BASE_LABEL.SUBMIT</div>
+    <button *ngIf="!to.hideSubmit && !hasForwardPage(selectedIndex)"
+      mat-raised-button
+      type="submit"
+      color="primary"
+      [disabled]="form.invalid">
+
+      <div translate>Submit</div>
     </button>
   </div>
 </div>
