--- a/src/app/formly-core/fields/radio-button-field/radio-button-field.component.html
+++ b/src/app/formly-core/fields/radio-button-field/radio-button-field.component.html
@@ -8,9 +8,9 @@
 
   <fieldset class="fieldset" [ngClass]="to.classes">
     <legend class="flex body-text">
-      <div [innerHTML]="((to._translationBaseKey + '.label') | translate) + (to.required ? ' *' : '') | tokens: to | keepHtml"></div>
+      <div [innerHTML]="((to._translationKey + '.label') | translate) + (to.required ? ' *' : '') | tokens: to | keepHtml"></div>
 
-      <mat-icon *ngIf="to.help" class="label-help" [matTooltip]="(to._translationBaseKey + '.help') | translate | tokens: to" matTooltipClass="mat-tooltip-content">help</mat-icon>
+      <mat-icon *ngIf="to.help" class="label-help" [matTooltip]="(to._translationKey + '.help') | translate | tokens: to" matTooltipClass="mat-tooltip-content">help</mat-icon>
     </legend>
 
     <ng-container *ngFor="let option of selectOptions$ | async | sortOptions">
