--- a/src/app/formly-core/fields/select-autocomplete-field/select-autocomplete-field.component.html
+++ b/src/app/formly-core/fields/select-autocomplete-field/select-autocomplete-field.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="!to.encapsulateLabel" class="flex body-text">
-  <label [for]="field.id" [innerHTML]="((to._translationBaseKey + '.label') | translate) + (to.required ? ' *' : '') | tokens: to | keepHtml"></label>
+  <label [for]="field.id" [innerHTML]="((to._translationKey + '.label') | translate) + (to.required ? ' *' : '') | tokens: to | keepHtml"></label>
 
-  <mat-icon *ngIf="to.help" class="label-help" [matTooltip]="(to._translationBaseKey + '.help') | translate | tokens: to" matTooltipClass="mat-tooltip-content">help</mat-icon>
+  <mat-icon *ngIf="to.help" class="label-help" [matTooltip]="(to._translationKey + '.help') | translate | tokens: to" matTooltipClass="mat-tooltip-content">help</mat-icon>
 </div>
 
 <mat-form-field
@@ -11,7 +11,7 @@
   [floatLabel]="to.floatLabel || 'always'">
 
   <mat-label *ngIf="to.encapsulateLabel" [for]="field.id" class="body-text">
-    {{ (to._translationBaseKey + '.label') | translate | tokens: to }}
+    {{ (to._translationKey + '.label') | translate | tokens: to }}
   </mat-label>
 
   <input matInput
@@ -19,8 +19,8 @@
     autocomplete="off"
     #autocompleteinput
     [id]="field.id"
-    [attr.aria-label]="(to._translationBaseKey + '.label') | translate | tokens: to"
-    [placeholder]="(to._translationBaseKey + '.placeholder') | translate | tokens: to"
+    [attr.aria-label]="(to._translationKey + '.label') | translate | tokens: to"
+    [placeholder]="(to._translationKey + '.placeholder') | translate | tokens: to"
     [formControl]="formControl"
     [formlyAttributes]="field"
     [tabindex]="to.tabindex || 0"
