--- a/src/app/formly-core/fields/select-dropdown-field/select-dropdown-field.component.html
+++ b/src/app/formly-core/fields/select-dropdown-field/select-dropdown-field.component.html
@@ -1,8 +1,8 @@
 <div *ngIf="!to.encapsulateLabel" class="flex body-text">
   <!-- This label should not have a for property as the mat-select builds an internal input for the select dropdown that we cannot map to --->
-  <label [innerHTML]="((to._translationBaseKey + '.label') | translate) + (to.required ? ' *' : '') | tokens: to | keepHtml"></label>
+  <label [innerHTML]="((to._translationKey + '.label') | translate) + (to.required ? ' *' : '') | tokens: to | keepHtml"></label>
 
-  <mat-icon *ngIf="to.help" class="label-help" [matTooltip]="(to._translationBaseKey + '.help') | translate | tokens: to" matTooltipClass="mat-tooltip-content">help</mat-icon>
+  <mat-icon *ngIf="to.help" class="label-help" [matTooltip]="(to._translationKey + '.help') | translate | tokens: to" matTooltipClass="mat-tooltip-content">help</mat-icon>
 </div>
 
 <mat-form-field
@@ -12,19 +12,19 @@
   [floatLabel]="to.floatLabel || 'always'">
 
   <mat-label *ngIf="to.encapsulateLabel" class="body-text">
-    {{ (to._translationBaseKey + '.label') | translate | tokens: to }}
+    {{ (to._translationKey + '.label') | translate | tokens: to }}
   </mat-label>
 
   <mat-select
     [id]="field.id"
-    [aria-label]="(to._translationBaseKey + '.label') | translate | tokens: to"
+    [aria-label]="(to._translationKey + '.label') | translate | tokens: to"
     [compareWith]="to.compareWith"
     [disableOptionCentering]="to.disableOptionCentering"
     [errorStateMatcher]="errorStateMatcher"
     [formControl]="formControl"
     [formlyAttributes]="field"
     [multiple]="to.multiple"
-    [placeholder]="(to._translationBaseKey + '.placeholder') | translate | tokens: to"
+    [placeholder]="(to._translationKey + '.placeholder') | translate | tokens: to"
     [required]="to.required"
     [tabindex]="to.tabindex || 0"
     [typeaheadDebounceInterval]="to.typeaheadDebounceInterval"
