--- a/src/app/formly-preview/formly-preview.component.html
+++ b/src/app/formly-preview/formly-preview.component.html
@@ -10,7 +10,7 @@
     <formly-form *ngIf="!isFormLoading" [form]="form" [fields]="fields" [model]="model" [options]="options"></formly-form>
 
     <button type="submit" [style.display]="'none'">
-      <div translate>FORMLY_CORE.BASE_LABEL.BACK</div>
+      <div translate>Back</div>
     </button>
   </form>
 </div>
