--- a/src/app/formly-core/fields/number-input-field/number-input-field.component.scss
+++ b/src/app/formly-core/fields/number-input-field/number-input-field.component.scss
@@ -26,6 +26,7 @@ mat-form-field {
   max-width: 45em;
 }
 
+/* Remove arrow controls from input */
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
