Corrected page label display in expander

--- a/src/app/formly-form-json-schema-builder/components/form-editor/form-editor.component.html
+++ b/src/app/formly-form-json-schema-builder/components/form-editor/form-editor.component.html
@@ -44,7 +44,7 @@
             </div>
 
             <div class="summary-row" [matTooltip]="page.model?._referenceId">
-              <div class="row-label" translate>Label</div>{{ page.model?.settings?.pageLabel | truncate: 150 }}
+              <div class="row-label" translate>Label</div>{{ page.model?.settings?.label | truncate: 150 }}
             </div>
           </mat-panel-title>
 
