Moved components around and fixed various bugs

--- a/src/app/formly-form-core/display-types/tab-form/tab-form.component.html
+++ b/src/app/formly-form-core/display-types/tab-form/tab-form.component.html
@@ -57,7 +57,7 @@
       type="submit"
       color="primary"
       [disabled]="form.invalid">
-      <div translate>Back</div>
+      <div translate>Submit</div>
     </button>
   </div>
 </div>
