--- a/src/app/formly-form-core/display-types/default-form/default-form.component.html
+++ b/src/app/formly-form-core/display-types/default-form/default-form.component.html
@@ -10,7 +10,7 @@
           <div translate>Navigate to Page</div>
         </mat-label>
 
-        <mat-select [formControl]="pageHistory" disableOptionCentering="true">
+        <mat-select [formControl]="pageHistory" disableOptionCentering="true" (selectionChange)="navigateToPage($event)">
           <mat-option *ngFor="let form of options?.formState.formHistory" [value]="form.name" class="previous-form-option mat-option-wrap">
             <div>{{ form.label | tokens: to }}</div>
           </mat-option>
