--- a/src/app/formly-form-json-schema-builder/components/page-fields/page-fields.component.html
+++ b/src/app/formly-form-json-schema-builder/components/page-fields/page-fields.component.html
@@ -34,6 +34,11 @@
       <td mat-header-cell *matHeaderCellDef class="mat-header-cell" translate>Position</td>
       <td mat-cell *matCellDef="let row" [attr.data-label]="'Position' | translate">
         {{ row.model?._order }}
+
+        <div class="center-content error" *ngIf="row.formControl?.touched && row.formControl?.invalid" matTooltip="{{ 'Contains errors' | translate }}">
+          <mat-icon>error</mat-icon>
+          {{ row.content }}
+        </div>
       </td>
     </ng-container>
 
